--- a/well_beings/Views/Home/Products.cshtml
+++ b/well_beings/Views/Home/Products.cshtml
@@ -12,7 +12,7 @@
     @foreach (var product in Model)
     {
         <div class="col-md-4 col-sm-6">
-            <div class="product-card" id="@product.Name">
+            <div class="product-card" id="@product.Name.ToLower()-product">
                 <div class="img-wrapper">
                     <img src="@product.DisplayImage" alt="@product.Name" />
                 </div>
@@ -43,10 +43,6 @@
                     $("#" + this.id).parent().hide();
                 }
             });
-        });
-
-        $(".img-wrapper").hover(function () {
-            console.log("hello");
         });
     });
 </script>
